all expected tags implement

--- a/index.html
+++ b/index.html
@@ -1,17 +1,87 @@
-<!-- change this file -->
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <!-- Page Title -->
     <title>First Practice in 4022</title>
     <!-- Insert Favicon -->
-    <link rel="icon" type="image/png" href="icon.png" />
+    <link rel="icon" type="image/png" href="icon.png"/>
     <!-- Insert Description -->
     <meta name="description" content="The first exercise of web programming">
-  </head>
-  <body>
+</head>
 
-  </body>
+<body>
+<header>
+    <h1>This is the header</h1>
+</header>
+
+<nav> <!-- links as list -->
+    <ul>
+        <li><a href="#" target="_blank">Link 1</a></li>
+        <li><a href="#" target="_self">Link 2</a></li>
+        <li><a href="#" target="_blank">Link 3</a></li>
+    </ul>
+</nav>
+
+<aside>
+    <p>This is the aside content</p>
+</aside>
+
+<main>
+    <section>
+        <h2>This is a section</h2>
+        <p>This is some text within the section</p>
+    </section>
+</main>
+
+<ul>
+    <li>Item 1
+        <ul> <!-- sub list -->
+            <li>Sub-item 1</li>
+            <li>Sub-item 2</li>
+        </ul>
+    </li>
+    <li>Item 2</li>
+</ul>
+
+<table>
+    <tr>
+        <th>Head1</th>
+        <th>Head2</th>
+    </tr>
+    <tr>
+        <td>Data1</td>
+        <td>Data2</td>
+    </tr>
+    <tr>
+        <td>Data3</td>
+        <td>Data4</td>
+    </tr>
+</table>
+
+<!-- media beginning -->
+<div>
+    <p>Now we enter a new part...
+        Note: If download is requested by IDM, there will be problems playing music</p>
+    <h3>MEDIA PART</h3>
+</div>
+
+<img src="i.jpg" alt="An image">
+<audio id="myAudio" src="m.mp3"></audio>
+<video controls>
+    <source src="v.mp4" type="video/mp4">
+</video>
+<button onclick="document.getElementById('myAudio').play()">CLICK ME TO PLAY AUDIO</button>
+
+<article>
+    <h4>This is an article</h4>
+    <p>some example text will be shown <span>as a sample span </span> in this part of document.</p>
+</article>
+
+<footer>
+    <p>at last, This is the footer</p>
+</footer>
+
+</body>
 </html>
